# pipe-by-schema

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  static_checks_and_test.yml
examples/: create_nodes_and_running_with_pipeline.ipynb
pipesche/: __init__.py
pipesche/core/datastore/: __init__.py  base.py  in_memory.py
pipesche/core/node/: __init__.py  base.py
pipesche/core/pipeline/: __init__.py  pipeline.py
pipesche/datastore/: __init__.py
spima/core/datastore/: __init__.py  base.py  in_memory.py
spima/core/node/: __init__.py  base.py
spima/core/pipeline/: __init__.py  pipeline.py
tests/core/pipeline/: test_pipeline.py
